# SimpleStateChange-SFML

./: CMakeLists.txt  README.md  main.cpp
include/: A_State.hpp  AssetManager.hpp  B_State.hpp  DEFINITION.hpp  Game.hpp  InputManager.hpp  MainMenuState.hpp  SplashState.hpp  State.hpp  StateMachine.hpp
src/: A_State.cpp  AssetManager.cpp  B_State.cpp  Game.cpp  InputManager.cpp  MainMenuState.cpp  SplashState.cpp  StateMachine.cpp
